--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                     <div id="map" class="map"></div>
                     <div class="mapLegendList">     <!--cần thay -->
                         <div class="mapLegendItem" id="polygon">
-                            <img src="http://localhost:8888/geoserver/cam_hoang/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=camhoang:camhoangdc_1" alt="CAMHOANG">  <!--cần thay -->
+                            <img src="YOURURL_GRAPHIC" alt="CAMHOANG">  <!--cần thay -->
                         </div>
                         <div class="mapLegendItem" id="line">
-                            <img src="http://localhost:8888/geoserver/cam_hoang/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=camhoang:camhoanggt_1" alt="CAMHOANG">  <!--cần thay -->
+                            <img src="YOURURL_GRAPHIC" alt="CAMHOANG">  <!--cần thay -->
                             <span>Đường</span>
                         </div>
                         <div class="mapLegendItem" id="point">
-                            <img src="http://localhost:8888/geoserver/cam_hoang/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=camhoang:camhoangtt_1" alt="CAMHOANG">  <!--cần thay -->
+                            <img src="YOURURL_GRAPHIC" alt="CAMHOANG">  <!--cần thay -->
                             <span>Điểm</span>
                         </div>
                     </div>
